style: fixed layout css to allow sidebar to collapse properly

--- a/frontend/src/components/layout/layout.module.scss
+++ b/frontend/src/components/layout/layout.module.scss
@@ -1,3 +1,6 @@
+#main{
+	// display: grid;
+}
 
 .layout{
 	height: 99vh;
